--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -46,14 +49,12 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:'  + firebaseVersion
 
     compile 'com.larswerkman:HoloColorPicker:1.5'
-    compile 'com.jakewharton:butterknife:8.6.0'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.github.gfx.android.orma:orma:4.2.5'
 
     annotationProcessor 'com.github.gfx.android.orma:orma-processor:4.2.5'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
     def leakcanaryVersion = '1.5.1'
     debugCompile   'com.squareup.leakcanary:leakcanary-android:'       + leakcanaryVersion
