Implement background setting activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:configChanges="screenSize"
             />
+        <activity
+            android:name=".settings.background.BackgroundSettingActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="screenSize"
+            />
     </application>
 
 </manifest>
