--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:' + supportLibVersion
     compile 'com.android.support:design:'       + supportLibVersion
     compile 'com.android.support:customtabs:'   + supportLibVersion
+    compile 'com.android.support:cardview-v7:'  + supportLibVersion
 
     def firebaseVersion = '10.2.1'
     compile 'com.google.firebase:firebase-core:' + firebaseVersion
