--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".calendar.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="orientation|screenSize|locale"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
