--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,3 +65,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.3.2"
 }
+
+apply plugin: 'com.google.gms.google-services'
